--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,3 @@
 ﻿[build]
-publish = "public"
-
-[functions]
-directory = "netlify/functions"
+  publish = "public"
+  functions = "netlify/functions"
